test/testData/parser/negative/arraySizeInit.c

int tla[];


int testF() {
  int la[];
}


