test/testData/parser/negative/arraySizeInit.err
test/testData/parser/negative/arraySizeInit.c:5:2: error: definition of variable with array type needs an explicit size or an initializer
test/testData/parser/negative/arraySizeInit.c:3:6: error: definition of variable with array type needs an explicit size or an initializer
